# Indie-Studio

./: .gitignore  CMakeLists.txt  README.md  findRaylib.cmake
files/: main.cpp  menu_start.cpp
headers/: Bomberman.hpp  DrawScope.hpp  Game.hpp  Indie.hpp  Raylib.hpp  State.hpp
headers/Dependencies/: Raylib.hpp  Rectangle.hpp
headers/Dependencies/Raylib/: Blur.hpp  Camera.hpp  Choice.hpp  Clock.hpp  Cube.hpp  DrawScope.hpp  Image.hpp  ImageColors.hpp  Input.hpp  Mesh.hpp  Model.hpp  ModelAnimation.hpp  Music.hpp  Slider.hpp  Sound.hpp  Text.hpp  Texture2D.hpp  Window.hpp
headers/Game/: AI.hpp  APlayer.hpp  Game.hpp  Human.hpp  Map.hpp  Player.hpp  gameConst.hpp
headers/Game/Components/: AI.hpp  APlayer.hpp  Bomb.hpp  Bonus.hpp  Box.hpp  Const.hpp  Human.hpp  Map.hpp  Player.hpp
headers/Scenes/: AScene.hpp  Button.hpp  IScene.hpp  SGame.hpp  SHud.hpp  SInit.hpp  SMenu.hpp  SOver.hpp  SPause.hpp  SSettings.hpp  Type.hpp
headers/Scenes/Button/: BExit.hpp  BPlay.hpp  Button.hpp
sources/: Bomberman.cpp  Game.cpp  Indie.cpp  Raylib.cpp  State.cpp  main.cpp  menu_start.cpp  test.cpp
sources/Dependencies/: Raylib.cpp  Rectangle.cpp
sources/Dependencies/Raylib/: Blur.cpp  Camera.cpp  Choice.cpp  Clock.cpp  Cube.cpp  Image.cpp  ImageColors.cpp  Input.cpp  Mesh.cpp  Model.cpp  ModelAnimation.cpp  Music.cpp  Slider.cpp  Sound.cpp  (+3 more)
sources/Game/: AI.cpp  APlayer.cpp  Game.cpp  Human.cpp  Map.cpp
sources/Menu/: Button.cpp
sources/Scenes/: AScene.cpp  SGame.cpp  SHud.cpp  SInit.cpp  SMenu.cpp  SOver.cpp  SPause.cpp  SSettings.cpp
temp/: parser.cpp  save.ini
(+37 files in other folders)
